# ECommerce-Customer-Churn-Analysis-Identifying-At-Risk-Customers

./: LICENSE  Project Structure  README.md  churn_analysis.ipynb  churn_data.csv  data_extraction.sql  pyproject.toml
