[tool.poetry]
name = "ecommerce-churn"
version = "0.1.0"
description = ""
authors = ["KouroshEmami <kourosh.emamyy@gmail.com>"]
readme = "README.md"
packages = [{ include = "ecommerce_churn", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.5,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
faker = ">=17.1.0,<18.0.0"
ipykernel = ">=6.29.5,<7.0.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"